[gd_scene load_steps=6 format=3 uid="uid://cphgxeuhywdfg"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy_parent.gd" id="1_wm476"]
[ext_resource type="PackedScene" uid="uid://b3wmjqb34cqs5" path="res://Scenes/Components/DamageArea/damage_area_component.tscn" id="2_1leip"]
[ext_resource type="PackedScene" uid="uid://d2c4ccnfltmr1" path="res://Scenes/Components/Health/health_component.tscn" id="2_hvinq"]
[ext_resource type="PackedScene" uid="uid://c73ovdjp0q4wx" path="res://Scenes/Components/Velocity/velocity.tscn" id="3_t6aan"]
[ext_resource type="PackedScene" uid="uid://c8wqavxm6m0q" path="res://Scenes/Components/Hitbox/hitbox_component.tscn" id="4_gw4np"]

[node name="EnemyMeleeParent" type="CharacterBody2D"]
z_index = 1
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 8
script = ExtResource("1_wm476")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="DamageAreaComponent" parent="." instance=ExtResource("2_1leip")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAreaComponent"]

[node name="Timers" type="Node" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_hvinq")]
unique_name_in_owner = true

[node name="Velocity" parent="." instance=ExtResource("3_t6aan")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "hit_box_shape") instance=ExtResource("4_gw4np")]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 80
health_component = NodePath("../HealthComponent")
hit_box_shape = NodePath("Hitbox")
timerDuration = 0.4

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]

[node name="CharacterBodyShape" type="CollisionShape2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="dead" from="HealthComponent" to="." method="_on_health_component_dead"]
